# oid4vp-wasm-matcher

./: Cargo.toml  README.md
src/: main.rs
src/credman/: mod.rs
src/dcql/: claims_pointer.rs  mod.rs  models.rs  parsers.rs
src/dcql/test_vectors/: cm_format_db.json  query.json  query_with_values.json  ubique_format_db.json
