[package]
name = "oid4vp-wasm-matcher"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.71.1"

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"
debug-assertions = false
codegen-units = 1
strip = true

[dependencies]
mini-alloc = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tinyjson = "2.5.1"
